Supporting genotype and refactoring